--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "recruitment-task",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://stassiek02.github.io/City-description/",
   "dependencies": {
+    "gh-pages": "^2.0.1",
+    "local-storage": "^2.0.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-autosuggest": "^9.4.3",
     "react-dom": "^16.8.6",
@@ -13,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
